Swagger includes login
